# EasyCMakeScripts

./: CMakeLists.txt  CMakePresets.json  README.md
basic_tests/: CMakeLists.txt
basic_tests/exampleBuilder/: CMakeLists.txt  example.cpp  exampleNoModule.cpp  exampleNoTarget.cpp  examplePiped.cpp  examplePiped.out.txt
basic_tests/versionScript/: CMakeLists.txt  version.cpp  versionGen.cpp  versionGen2.cpp
cmake/: Config.cmake.in  easyCMakeExampleBuilder.cmake  easyCMakeVersion.cmake  installConfig.cmake  version.h.in
res/: compressRelease.py.in
