# Part of Project EasyCMakeScripts
# Copyright (C) Harith Manoj
# Licensed under Apache License, Version 2.0
# See http://www.apache.org/licenses/LICENSE-2.0    
# for copy of license or attached LICENSE text file.
# Date: 19 December 2024

message(STATUS "CMAKE Now at EasyCMakeScripts basic tests Configuration")

include(../cmake/easyCMakeVersion.cmake)

add_subdirectory(versionScript)
add_subdirectory(exampleBuilder)

